--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,8 @@ code {
   justify-content: center;
 }
 .question-form{
-  margin-bottom: 16px;
+  margin-bottom: 24px;
+  width: 300px;
 }
 .question-score{
   margin-bottom: 16px;
@@ -71,4 +72,33 @@ code {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+
+.form-check-input:after {
+  width: 16px;
+  height: 16px;
+  border-radius: 16px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: #d1d3d1;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+.form-check-input:checked:after {
+  width: 16px;
+  height: 16px;
+  border-radius: 16px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: #ffa500;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
 }
